syntax = "proto3";
package types;

option go_package = "github.com/keybittech/awayto-v3/go/pkg/types";

message CachedGroup {
  map<string, CachedSubGroup> subGroups = 1;
  string id = 2;
  string externalId = 3;
  string sub = 4;
  string name = 5;
  bool ai = 6;
}

message CachedSubGroup {
  string externalId = 1;
  string groupPath = 2;
  string name = 3;
}
